; ModuleID = '/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_get_cache_item_simple.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/pmemcached/extr_pmemcached-data.c_get_cache_item_simple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.entry = type { i32, i32 }

@verbosity = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"get_cache_item_simple\0A\00", align 1
@__tmp = common dso_local global %struct.entry zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.entry* @get_cache_item_simple(i8* %0, i32 %1) #0 {
  %3 = alloca %struct.entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* @verbosity, align 4
  %7 = icmp sge i32 %6, 4
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fprintf(i32 %9, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i32, i32* %5, align 4
  %13 = icmp sge i32 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %11
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* getelementptr inbounds (%struct.entry, %struct.entry* @__tmp, i32 0, i32 0), align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %14
  %19 = load i8*, i8** %4, align 8
  %20 = load i32, i32* getelementptr inbounds (%struct.entry, %struct.entry* @__tmp, i32 0, i32 1), align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @memcmp(i8* %19, i32 %20, i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %18
  store %struct.entry* @__tmp, %struct.entry** %3, align 8
  br label %30

25:                                               ; preds = %18, %14, %11
  %26 = call i32 @free_cache_item(%struct.entry* @__tmp)
  %27 = load i8*, i8** %4, align 8
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @create_new_cache_item(%struct.entry* @__tmp, i8* %27, i32 %28)
  store %struct.entry* @__tmp, %struct.entry** %3, align 8
  br label %30

30:                                               ; preds = %25, %24
  %31 = load %struct.entry*, %struct.entry** %3, align 8
  ret %struct.entry* %31
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @memcmp(i8*, i32, i32) #1

declare dso_local i32 @free_cache_item(%struct.entry*) #1

declare dso_local i32 @create_new_cache_item(%struct.entry*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
